- Cleanup - Rejoin issue fix

--- a/TicTacToR.Web/Web.config
+++ b/TicTacToR.Web/Web.config
@@ -17,6 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="consumerKey" value="--add your key here--"/>
+    <add key="consumerSecret" value="--add your secret here--"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
