Improved Gameplay (Cannot click on 'Challenge' multiple times).

--- a/TicTacToR.Web/Web.config
+++ b/TicTacToR.Web/Web.config
@@ -17,8 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="consumerKey" value="--add your key here--"/>
-    <add key="consumerSecret" value="--add your secret here--"/>
+    <add key="consumerKey" value="71hJ9NOflgidBJrWnrhG4Q"/>
+    <add key="consumerSecret" value="hLRCHCDu2X01eAHTs2QXxxCK7r3MM09GINcl736Gg"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
